force-app/main/default/objects/Contact/fields/Enterprise_Party_Id__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Party_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External ID generated by MDM system to uniquely identify this Contact</description>
    <externalId>true</externalId>
    <label>Enterprise Party Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>