force-app/main/default/objects/Contact/fields/MM_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>MM_Member_ID__c</fullName>
    <description>Member ID unique customer Identifier is mastered by the MDM system for End Customers</description>
    <externalId>true</externalId>
    <label>Member ID</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>