force-app/main/default/objects/Contact/fields/Producer_BP_Id__c.field-meta.xml
<CustomField>
    <fullName>Producer_BP_Id__c</fullName>
    <description>External ID generated by MDM system to uniquely identify this Producer Contact</description>
    <externalId>true</externalId>
    <label>Producer BP Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>